@@ -507,3 +507,5 @@ License:  This library is freeware. You may use this code in your own projects f
               HDD_GetAbsolutePathByTypeFile(), HDD_TAP_GetIDByIndex(), HDD_GetFileTimeByTypeFile(), HDD_GetInodeByTypeFile()
 2010-07-19  Fixed: Removed the firmware version check in HDD_ChangeDir()
 2010-07-24  Fixed: A numbered line in TMS OSD menu should now correctly display until 10000. It has been truncated starting from 100.
+2010-07-26  Fixed: Endless loop if a menu doesn't have a single selectable item
+2010-07-30  Fixed: Modified StrMkISO() and StrMkUTF8() so that they dynamically allocate the necessary memory
